--- a/README.rdoc
+++ b/README.rdoc
@@ -44,7 +44,7 @@ install xinuc-sermont from github.com
 
 == Add Your Own Handler
 
-If you have any services that can't be checked by simply openi the port, you can
+If you have any services that can't be checked by simply open the port, you can
 add you own service handler. As an example, if you want to check 'weird' service by
 your own method, you can create a file name "weird.rb" under YOUR_HOME_DIR/.sermont/
 Then, the file should be like :
