--- a/README.rdoc
+++ b/README.rdoc
@@ -18,6 +18,7 @@ type the command in your terminal.
   -r,  --raw            : print the report without colors
   -t TIME, --time TIME  : checking every TIME seconds
   -o FILE, --output FILE: write the report to the FILE
+  -l, --last            : log only the last report
   -d, --daemon          : running as a daemon
   -h, --help            : print this help
   -v, --version         : print sermont version
